<?php

namespace App\Enum;

enum CivilityEnum : string
{
    case MR = 'Mr';
    case MRS = 'Mrs';
    case MISS = 'Miss';
    case OTHER = 'Other';
}