<?php

namespace App\Enum;

enum OwnershipTypeEnum : string
{
    case OWNER = 'owner';
    case BUYER = 'buyer';
}