<?php

namespace App\Enum;

enum PlatformRoleEnum : string
{
    case ADMIN = 'admin';
    case USER = 'user';
}